Add a cleanup task

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-    - name: Do a thing
+    - name: Log some stuff
       run: |
         cat $GITHUB_EVENT_PATH
         env | grep GITHUB
-    
