--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Commit artifacts
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          file_pattern: *
+          file_pattern: "*"
           commit_message: Commit asset bundles
           branch: release
