--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,3 +15,4 @@ jobs:
           urls: |
             https://chris.nunciato.org/
             https://chris.nunciato.org/photos/
+          uploadArtifacts: true
