--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string.
     # Run every day at 6:00PM UTC.
-    - cron:  '23 18 * * *'
+    - cron:  '21 19 * * *'
 jobs:
   all:
     name: Lighthouse
@@ -16,3 +16,4 @@ jobs:
             https://chris.nunciato.org/
             https://chris.nunciato.org/photos/
           uploadArtifacts: true
+          temporaryPublicStorage: true
