--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,21 +1,15 @@
 name: Pull Request
 on:
-  pull_request:
-    branches:
-      - master
-    types:
-      - opened
   issue_comment:
     types:
       - created
 jobs:
-  build:
+  dispatch:
     runs-on: ubuntu-latest
     steps:
-      - name: Maybe run
-        run: |
-          echo "running"
-      - name: Actually run the checks
+      - name: Repository Dispatch
         if: contains(github.event.comment.body, '/run-checks')
-        run: |
-          echo "yay!"
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: run-request
