Tweak the workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,7 @@ on:
       - created
 jobs:
   dispatch:
+    name: Handle Comment
     runs-on: ubuntu-latest
     steps:
       - name: Repository Dispatch
