--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,7 +7,7 @@ on:
     types:
       - created
 jobs:
-  dispatch:
+  run_pr_checks:
     if: contains(github.event.comment.body, '/run-checks')
     name: Run PR Checks
     runs-on: ubuntu-latest
