--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,14 +1,13 @@
-name: Run PR checks
+name: Handle pull requests
 on:
-  issue_comment:
-    types:
-      - created
+  pull_request:
+    branches:
+      - master
 jobs:
   run_pr_checks:
-    if: contains(github.event.comment.body, '/run-checks')
     name: Run all checks
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Run the first check
+      - name: Run a check
         run: |
-          echo "Hey, I ran!"
+          echo "Hey look, I ran!"
