--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,8 +4,18 @@ on:
     branches:
       - master
 jobs:
+  check_perms:
+    runs-on: ubuntu-latest
+    outputs:
+      perms: ${{ steps.check-perms.outputs.perms }}
+    steps:
+      - id: check-perms
+        run: |
+          perms="$(node scripts/check-repo-perms.js)"
+          echo "::set-output name=perms::$perms"
   run_push_jobs:
     name: Do all the things
+    if: ${{ needs.check-perms.outputs.perms == 'admin' }}
     runs-on: self-hosted
     steps:
       - name: Do a thing
