--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           npm install
           perms="$(node ./scripts/get-repo-perms.js)"
+          echo $perms
           echo "::set-output name=perms::$perms"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
