--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,7 +24,7 @@ jobs:
     name: Do all the things
     runs-on: ubuntu-latest
     needs: check_perms
-#     if: ${{ needs.check_perms.outputs.perms == 'admin' }}
+    if: ${{ needs.check_perms.outputs.perms == 'admin' }}
     steps:
       - name: Do a thing
         run: |
