--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
       - name: Check perms
         id: perms
-        uses: cnunciato/check-repo-perms@v0.6
+        uses: cnunciato/check-repo-perms@v0.8
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Do a thing
+      - name: Do the trusted-only thing
+        if: ${{ steps.perms.outputs.is_trusted }}
         run: |
-          echo "${{ steps.perms.outputs.permission }}"
+          echo "Doing the thing!"
