--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Do the trusted-only thing
-        if: ${{ steps.perms.outputs.is_trusted }}
+        if: ${{ steps.perms.outputs.is_trusted == 'true' }}
         run: |
           echo "Doing the thing!"
