--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,16 +4,40 @@ on:
     branches:
       - master
 jobs:    
-  run_pr_checks:
-    name: Run all checks
+  check_repo_perms:
+    name: Check repo permissions
     runs-on: ubuntu-latest
+    outputs:
+      perms: ${{ steps.perms.outputs.permission }}
+      is_trusted: ${{ steps.perms.outputs.is_trusted }}
     steps:
       - name: Check repo permissions
         id: perms
         uses: cnunciato/check-repo-perms@v0.14
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+  run_pr_checks:
+    name: Run all checks
+    runs-on: ubuntu-latest
+    needs: check_repo_perms
+    if: ${{ needs.check_repo_perms.outputs.is_trusted == 'true' }}
+    steps:
       - name: Do the trusted-only thing
-        if: ${{ steps.perms.outputs.is_trusted == 'true' }}
         run: |
           echo "Doing the thing!"
+
+# jobs:    
+#   run_pr_checks:
+#     name: Run all checks
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Check repo permissions
+#         id: perms
+#         uses: cnunciato/check-repo-perms@v0.14
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Do the trusted-only thing
+#         if: ${{ steps.perms.outputs.is_trusted == 'true' }}
+#         run: |
+#           echo "Doing the thing!"
+
