--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,18 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       perms: ${{ steps.perms.outputs.permission }}
-      is_member_of_org: ${{ steps.perms.outputs.is_member_of_org }}
+      has_write: ${{ steps.perms.outputs.has_write }}
     steps:
       - name: Check repo permissions
         id: perms
-        uses: cnunciato/check-repo-perms@v0.17
+        uses: cnunciato/check-repo-perms@v0.18
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   run_pr_checks:
     name: Run all checks
     runs-on: self-hosted
     needs: check_repo_perms
-    if: ${{ needs.check_repo_perms.outputs.is_member_of_org == 'true' }}
+    if: ${{ needs.check_repo_perms.outputs.has_write == 'true' }}
     steps:
       - name: Do the trusted-only thing
         run: |
