--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           echo "$GITHUB_JOB_ID"
           echo "$GITHUB_RUN_ID"
-          cat "/github/workflow/event.json"
+          cat "$GITHUB_EVENT_PATH"
