--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,3 +27,4 @@ jobs:
           echo "$GITHUB_JOB_ID"
           echo "$GITHUB_RUN_ID"
           cat "$GITHUB_EVENT_PATH"
+          echo "${{ github }}"
