--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,32 +1,15 @@
-name: Handle pushes
+name: Handle pull requests
 on:
   push:
     branches:
       - master
-jobs:
-  check_perms:
-    name: Check repo permissions
-    runs-on: ubuntu-latest
-    outputs:
-      perms: ${{ steps.check-perms.outputs.perms }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Check perms
-        id: check-perms
-        run: |
-          npm install
-          perms="$(node ./scripts/get-repo-perms.js)"
-          echo $perms
-          echo "::set-output name=perms::$perms"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  run_push_jobs:
-    name: Do all the things
+jobs:    
+  run_pr_checks:
+    name: Run all checks
     runs-on: self-hosted
-    needs: check_perms
-    if: ${{ needs.check_perms.outputs.perms == 'admin' }}
     steps:
-      - name: Do a thing
+      - name: Try to use secrets
         run: |
-          echo "${{ needs.check_perms.outputs.perms == 'admin' }}"
-          echo "${{ needs.check_perms.outputs.perms }}"
+          echo "$SOME_SECRET"
+        env:
+          SOME_SECRET: ${{ secrets.SOME_SECRET }}
