--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:    
-  run_pr_checks:
+  run_all_checks:
     name: Run all checks
     runs-on: self-hosted
     steps:
